--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "1.10.0",
+    "i": "^0.3.7",
+    "npm": "^10.8.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-calendars": "^1.1305.0",
+    "react-native-gesture-handler": "^2.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
