--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-calendars": "^1.1305.0",
-    "react-native-gesture-handler": "^2.17.1"
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.13.0",
+    "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0",
+    "react-native-timezone": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
