--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@react-native-community/async-storage": "1.10.0",
     "i": "^0.3.7",
     "npm": "^10.8.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-calendars": "^1.1305.0",
+    "react": "18.0.0",
+    "react-native": "0.72.8",
+    "react-native-calendars": "latest",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.13.0",
     "react-native-svg": "^15.3.0",
